--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore local database config
 config/database.yml
 
+# Ignore secrets (find in sample.secrets)
+config/secrets.yml
+
 *.rbc
 capybara-*.html
 .rspec
